Add Listings map markers

--- a/taui/src/sass/06_components/_map.scss
+++ b/taui/src/sass/06_components/_map.scss
@@ -47,6 +47,14 @@
       }
     }
 
+    &--listing {
+      background-color: $listing;
+
+      &::before {
+        border-top: 20px solid $listing;
+      }
+    }
+
     &--other {
       background-color: $primary;
 
