--- a/taui/src/sass/06_components/_map.scss
+++ b/taui/src/sass/06_components/_map.scss
@@ -68,6 +68,10 @@
 
     background-color: $white;
 
+    .slider {
+      height: 140px !important;
+    }
+
     h1 {
       @include heading(400);
     }
@@ -112,6 +116,17 @@
   }
 
   &__popup-contents {
-    margin: 1rem;
+    height: 140px;
+    padding: 10px 10px 0;
+  }
+
+  &__popup-no-photo-contents {
+    height: 120px;
+    padding: 0 10px;
+
+    h1, h2, p {
+      margin: 0 0 10px !important;
+      line-height: 15px !important;
+    }
   }
 }
