Adjust Popup hover styling

--- a/taui/src/taui.css
+++ b/taui/src/taui.css
@@ -234,15 +234,7 @@ table.CardContent td:first-of-type {
 
 .listing-detail-popup .leaflet-popup-content {
   margin: 0;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-}
-
-.listing-detail-popup .leaflet-popup-content p {
-  margin: 0 0 1rem;
-  white-space: nowrap;
-  overflow-x: hidden;
-  text-overflow: ellipsis;
+  padding: 0;
 }
 
 .Popup button {
