--- a/taui/src/sass/06_components/_auth-header.scss
+++ b/taui/src/sass/06_components/_auth-header.scss
@@ -15,13 +15,12 @@
   }
 
   &__logo {
-    max-width: 5.6rem;
-    margin-right: 1.6rem;
+    max-width: 9.6rem;
   }
 
   &__app-name {
     @include heading(800);
-    margin: 1.6rem 0 2.4rem;
+    margin-bottom: 2.4rem;
     text-align: center;
   }
 
