--- a/taui/src/sass/06_components/_neighborhood-details.scss
+++ b/taui/src/sass/06_components/_neighborhood-details.scss
@@ -71,37 +71,27 @@
     line-height: 2.4;
   }
 
-  &__stats {
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: stretch;
-    justify-content: space-between;
-    width: 100%;
-  }
-
   &__rent {
     flex: none;
-    margin-right: 0.8rem;
-    padding-top: 0.4rem;
-    padding-right: 1.6rem;
-    text-align: center;
-    border-right: 4px solid $bg-gray;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-between;
   }
 
   &__rent-label {
     @include text(300);
-    margin-bottom: 0.8rem;
+  }
+
+  &__rent-rooms {
+    @include text(400);
+    @include font-weight(bold);
   }
 
   &__rent-value {
     @include text(500);
     @include font-weight(bold);
-    margin-bottom: 0.8rem;
-  }
-
-  &__rent-rooms {
-    @include text(300);
-    @include font-weight(bold);
+    text-align: right;
   }
 
   &__images {
