Polish listing markers, popups

--- a/taui/src/sass/01_settings/_color.scss
+++ b/taui/src/sass/01_settings/_color.scss
@@ -13,12 +13,14 @@ $black: #000;
 
 $bg-gray: #ecedef;
 
+$brand: #4fb0c9;
+
 $primary: #15379d;
 $active: #128d31;
 
 $ecc: #108a02;
 
-$listing: #bb3b43;
+$listing: $brand;
 
 $error: #9d3715;
 
