Update styling for login page to replace amplify-theme

--- a/taui/src/sass/main.scss
+++ b/taui/src/sass/main.scss
@@ -11,6 +11,7 @@
 '04_reset/reset.scss',
 '05_base/base.scss',
 '06_components/auth-header.scss',
+'06_components/auth-main.scss',
 '06_components/app-header.scss',
 '06_components/account-profile.scss',
 '06_components/account-search.scss',
