--- a/taui/src/sass/01_settings/_type.scss
+++ b/taui/src/sass/01_settings/_type.scss
@@ -15,6 +15,7 @@ $font-sizes: (
     100: 1rem,
     150: 1.1rem,
     200: 1.2rem,
+    250: 1.3rem,
     300: 1.4rem,
     400: 1.6rem,
     500: 2rem,
@@ -40,6 +41,12 @@ $text-settings: (
         color: map-get($font-colors, dark),
         font-weight: map-get($font-weights, normal),
         font-size: map-get($font-sizes, 200),
+        line-height: 1.5,
+    ),
+    250: (
+        color: map-get($font-colors, dark),
+        font-weight: map-get($font-weights, normal),
+        font-size: map-get($font-sizes, 250),
         line-height: 1.5,
     ),
     300: (
@@ -74,6 +81,12 @@ $heading-settings: (
         color: map-get($font-colors, normal),
         font-weight: map-get($font-weights, bold),
         font-size: map-get($font-sizes, 200),
+        line-height: 1.2,
+    ),
+    250: (
+        color: map-get($font-colors, normal),
+        font-weight: map-get($font-weights, bold),
+        font-size: map-get($font-sizes, 250),
         line-height: 1.2,
     ),
     300: (
