--- a/taui/src/sass/06_components/_auth-main.scss
+++ b/taui/src/sass/06_components/_auth-main.scss
@@ -4,6 +4,35 @@
   align-items: stretch;
   justify-content: flex-start;
 
+  input {
+    width: 100%;
+    height: 50px;
+    margin-top: 0.8rem;
+    border-radius: 0.25rem;
+  }
+
+  &__button {
+    height: 4rem;
+
+    &--primary {
+      @include button($color: $white, $background: $primary);
+      @include light-on-dark();
+      @include font-weight(bold);
+      width: 95%;
+      margin-top: 1rem;
+      margin-left: 1rem;
+      margin-bottom: 2rem;
+    }
+  }
+
+  &__success-message {
+    @include font-weight(bold);
+    @include text(400);
+    color: darkgreen;
+    text-align: center;
+    margin-bottom: 1rem;
+  }
+
   &__anonymous-login {
   padding: 0;
   font-size: 1.4rem;
