--- a/src/frontend/src/sass/06_components/_auth-main.scss
+++ b/src/frontend/src/sass/06_components/_auth-main.scss
@@ -34,14 +34,19 @@
     text-align: center;
   }
 
-  &__anonymous-login {
+  &__anonymous-login, &__new-user-toggle {
   padding: 0;
   font-size: 1.4rem;
   line-height: 1.5;
   text-align: center;
 
-    a {
+    a, .link {
         color: $primary;
+    }
+
+    .link {
+        color: $primary;
+        cursor: pointer;
     }
   }
 }
