Add photo bucket variable to terraform for prod & stg environments

--- a/deployment/terraform-django/task-definitions/app.json.tmpl
+++ b/deployment/terraform-django/task-definitions/app.json.tmpl
@@ -38,6 +38,10 @@
         "value": "${default_from_email}"
       },
       {
+        "name": "AWS_S3_PHOTO_BUCKET",
+        "value": "${aws_s3_photo_bucket}"
+      },
+      {
         "name": "DJANGO_LOG_LEVEL",
         "value": "${django_log_level}"
       },
