Change allowed_hosts and django_env

--- a/deployment/terraform-django/task-definitions/app.json.tmpl
+++ b/deployment/terraform-django/task-definitions/app.json.tmpl
@@ -27,7 +27,7 @@
       },
       {
         "name": "DJANGO_ENV",
-        "value": "Staging"
+        "value": "${django_env}"
       },
       {
         "name": "DJANGO_SECRET_KEY",
