--- a/deployment/terraform-django/task-definitions/app_cli.json.tmpl
+++ b/deployment/terraform-django/task-definitions/app_cli.json.tmpl
@@ -30,7 +30,7 @@
       },
       {
         "name": "DJANGO_ENV",
-        "value": "${environment}"
+        "value": "${django_env}"
       },
       {
         "name": "DJANGO_SECRET_KEY",
